style: fix layout of public view to be less squished

--- a/public/styles.css
+++ b/public/styles.css
@@ -571,7 +571,7 @@ footer {
 
 .public-view-container { 
   max-width: 800px; 
-  margin: 40px auto; 
+  margin: 20px; 
   padding: 0 20px; 
 }
 
@@ -591,8 +591,20 @@ footer {
   justify-content: space-between; 
   align-items: center; 
   padding: 15px; 
-  border-bottom: 
-  1px solid #f5f5f5;
+  transition: none;
+  cursor: auto;
+}
+
+.public-item:hover {
+  transform: none;
+  box-shadow: none;
+}
+
+.file-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
 /* Footer Link */
